--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 
   <header class="post-header">
     {%- if page.related_image -%}
-      <img src="{{ page.related_image }}" alt="Header image " />
+      <div class="ratio_16_9"><img src="{{ page.related_image }}" alt="Header image " /></div>
     {%- endif -%}
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
     <p class="post-meta">
