--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,17 +22,41 @@ layout: default
             {{ post.title | escape }}
           </a>
         </h3>
+        <h4>
+            {{ post.subtitle | escape }}
+        </h4>
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         <span class="post-meta">{{ post.date | date: date_format }}</span>
 
         {%- if site.show_excerpts -%}
           {{ post.excerpt }}
         {%- endif -%}
+        {% if site.feed_show_tags != false and post.tags.size > 0 %}
+        <div class="blog-tags">
+          <span>Tags:</span>
+          {% for tag in post.tags %}
+          <a href="{{ '/tags' | absolute_url }}#{{- tag -}}">{{- tag -}}</a>
+          {% endfor %}
+        </div>
+        {% endif %}
       </li>
       {%- endfor -%}
     </ul>
 
     <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
   {%- endif -%}
-
+  {% if paginator.total_pages > 1 %}
+  <ul class="pagination main-pager">
+    {% if paginator.previous_page %}
+    <li class="page-item previous">
+      <a class="page-link" href="{{ paginator.previous_page_path | absolute_url }}">&larr; Newer Posts</a>
+    </li>
+    {% endif %}
+    {% if paginator.next_page %}
+    <li class="page-item next">
+      <a class="page-link" href="{{ paginator.next_page_path | absolute_url }}">Older Posts &rarr;</a>
+    </li>
+    {% endif %}
+  </ul>
+  {% endif %}
 </div>
