--- a/_sass/harmony/_layout.scss
+++ b/_sass/harmony/_layout.scss
@@ -180,6 +180,16 @@
   @include relative-font-size(2);
 }
 
+.post-card {
+  display: flex;
+}
+
+@include media-query($on-palm) {
+  .post-card {
+    display: block;
+  }
+}
+
 .post-list-heading {
   @include relative-font-size(1.75);
 }
@@ -190,6 +200,10 @@
 
   > li {
     margin-bottom: $spacing-unit;
+  }
+
+  .post-text {
+    padding-left: 10px;
   }
 }
 
