--- a/_sass/harmony/_layout.scss
+++ b/_sass/harmony/_layout.scss
@@ -9,6 +9,9 @@
   // Positioning context for the mobile navigation icon
   position: relative;
 }
+.site-logo {
+  height: 40px;
+}
 
 .site-title {
   @include relative-font-size(1.625);
@@ -17,6 +20,8 @@
   letter-spacing: -1px;
   margin-bottom: 0;
   float: left;
+  display: flex;
+  align-items: center;
 
   &,
   &:visited {
@@ -39,10 +44,13 @@
   .page-link {
     color: $text-color;
     line-height: $base-line-height;
+    text-transform: uppercase;
+    font-family: "Montserrat", sans-serif;
+    font-size: smaller;
 
     // Gaps between nav items, but not on the last one
     &:not(:last-child) {
-      margin-right: 20px;
+      margin-right: 80px;
     }
   }
 
@@ -91,6 +99,8 @@
     .page-link {
       display: block;
       padding: 5px 10px;
+      text-transform: uppercase;
+      font-family: "Montserrat", sans-serif;
 
       &:not(:last-child) {
         margin-right: 0;
@@ -226,8 +236,10 @@
 
 .post-title {
   @include relative-font-size(2.625);
-  letter-spacing: -1px;
   line-height: 1;
+  text-transform: uppercase;
+  margin-top: 30px;
+  font-size: 28px;
 
   @include media-query($on-laptop) {
     @include relative-font-size(2.25);
@@ -236,6 +248,7 @@
 
 .post-content {
   margin-bottom: $spacing-unit;
+  text-align: justify;
 
   h2 {
     @include relative-font-size(2);
