--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,15 +5,15 @@
   <link
     rel="apple-touch-icon"
     sizes="180x180"
-    href="/assets/images/apple-touch-icon.png"
+    href="{{ '/assets/images/apple-touch-icon.png' | relative_url }}"
   />
   <link
     rel="icon"
     type="image/png"
     sizes="32x32"
-    href="/assets/images/favicon-32x32.png"
+    href="{{ '/assets/images/favicon-32x32.png' | relative_url }}"
   />
-  <link rel="shortcut icon" href="/assets/images/favicon.ico" />
+  <link rel="shortcut icon" href="{{ '/assets/images/favicon.ico' | relative_url }}" />
   {%- seo -%}
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}" />
   {%- feed_meta -%} {%- if jekyll.environment == 'production' and
