--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
-      <img class="site-logo" src="/blog/assets/images/logo.png" alt="Logo" />
+      <img class="site-logo" src="{{ '/assets/images/logo.png' | relative_url }}" alt="Logo" />
       {{ site.title | escape }}
     </a>
 
